@@ -56,4 +56,5 @@
 p1InBody = false
 
 ### Decides whether the attachment should be dumped in the queue. Please disable for large file transfers.
+### The default behavior is putAttachmentInQueue = true
 #putAttachmentInQueue = true
