@@ -56,6 +56,7 @@
 p1InBody = false
 
 ### Decides whether the attachment should be dumped in the queue. Please disable for large file transfers.
+### The default behavior is putAttachmentInQueue = true
 #putAttachmentInQueue = true
 
 
